--- a/testserver/testserver/pom.xml
+++ b/testserver/testserver/pom.xml
@@ -83,6 +83,19 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-webflux</artifactId>
 		</dependency>
+
+		<!-- JAXB ( for JWT (?) ) !-->
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.3.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.glassfish.jaxb</groupId>
+			<artifactId>jaxb-runtime</artifactId>
+			<version>2.3.3</version> <!-- 또는 최신 버전 -->
+		</dependency>
+
 	</dependencies>
 
 	<build>
