--- a/testserver/testserver/pom.xml
+++ b/testserver/testserver/pom.xml
@@ -39,6 +39,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.12.0</version> <!-- 버전은 필요에 따라 조정하세요 -->
+		</dependency>
+
+		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>8.0.33</version> <!-- 최신 버전 확인 후 업데이트 -->
