FEAT: 주소록, FIX: gitignore, ChatgptService

--- a/testserver/testserver/src/main/resources/application.properties
+++ b/testserver/testserver/src/main/resources/application.properties
@@ -14,6 +14,6 @@ chatgpt.api.key=sk-proj-U4aS9pDeFtkvaQBVHseeetSCB0V4eXFEYkY0UHYvX1XY6gtFGsexJcjE
 
 spring.codec.max-in-memory-size=10MB
 #MYsql
-spring.r2dbc.url=r2dbc:mysql://localhost:3306/USER?serverTimezone=Asia/Seoul
-spring.r2dbc.username=root
-spring.r2dbc.password=6717
+spring.r2dbc.url=r2dbc:mysql://3.104.109.104:3306/USER
+spring.r2dbc.username=hansung
+spring.r2dbc.password=cardO1234!
