--- a/testserver/testserver/src/main/resources/application.properties
+++ b/testserver/testserver/src/main/resources/application.properties
@@ -5,6 +5,9 @@ logging.level.com.example.testserver.secure.JwtFilter=DEBUG
 logging.level.org.springframework.data.r2dbc=DEBUG
 logging.level.io.r2dbc=DEBUG
 
+server.address=0.0.0.0
+server.port=8080
+
 # DeepAI API Key
 huggingface.api.key=
 
